update animation & effects

--- a/index.html
+++ b/index.html
@@ -105,3 +105,11 @@
     <script src="script.js"></script>
 </body>
 </html>
+<a href="https://hyperxz08.github.io/realwyndzx-member/" class="btn">
+  🔗 เข้าเว็บ
+</a>
+<div class="card">
+  
+  <h3>Member Name</h3>
+  <p>Role / Status</p>
+</div>
