--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
   🔗 เข้าเว็บ
 </a>
 <div class="card">
-  
+
   <h3>Member Name</h3>
   <p>Role / Status</p>
 </div>
+<div class="bottom-divider"></div>
