update animation & effects

--- a/index.html
+++ b/index.html
@@ -105,5 +105,13 @@
     <script src="script.js"></script>
 </body>
 </html>
+<a href="https://www.facebook.com/ชื่อเพจของคุณ"
+   target="_blank"
+   class="facebook-link">
+
+  <div class="facebook-box">
+    <span>MY FANPAGE</span>
+  </div>
+</a>
 <div class="card">
 <div class="bottom-divider"></div>
