.facebook-link {   text-decoration: none;   display: block; }  .big-facebook-card {   cursor: pointer;   transition: transform 0.3s ease, box-shadow 0.3s ease; }  .big-facebook-card:hover {   transform: scale(1.03);   box-shadow: 0 0 40px rgba(0,255,255,0.6); }  .fb-text {   margin-top: 20px;   text-align: center;   color: #00ffff;   font-size: 20px;   font-weight: bold;   text-shadow: 0 0 10px #00ffff; }

--- a/index.html
+++ b/index.html
@@ -105,13 +105,15 @@
     <script src="script.js"></script>
 </body>
 </html>
-<a href="https://www.facebook.com/ชื่อเพจของคุณ"
+<a href="https://www.facebook.com/profile.php?id=61586355033442/Realwyndzx 169"
    target="_blank"
    class="facebook-link">
 
-  <div class="facebook-box">
-    <span>MY FANPAGE</span>
-  </div>
+    <div class="big-facebook-card">
+        <div class="glow-line"></div>
+        <div class="fb-text">เข้า Facebook เพจ</div>
+    </div>
+
 </a>
 <div class="card">
 <div class="bottom-divider"></div>
