update animation & effects

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
     <script src="script.js"></script>
 </body>
 </html>
-<a href="https://www.facebook.com/profile.php?id=61586355033442/Realwyndzx 169"
+<a href="https://facebook.com/ชื่อเพจของคุณ"
    target="_blank"
-   class="facebook-link">
+   class="main-facebook-btn">
 
-    <div class="big-facebook-card">
-        <div class="glow-line"></div>
-        <div class="fb-text">เข้า Facebook เพจ</div>
-    </div>
+  <div class="big-facebook-card">
+    <div class="glow-line"></div>
+    <div class="main-fb-text">เข้า Facebook เพจ</div>
+  </div>
 
 </a>
 <div class="card">
