--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
 
     <script src="script.js"></script>
 </body>
+<a href="https://www.facebook.com/profile.php?id=61586355033442/Realwyndzx 169"
+   target="_blank"
+   class="main-facebook-btn">
 
+  <div class="big-facebook-card">
+    <div class="glow-line"></div>
+    <div class="main-fb-text">ติดต่อได้ที่เพจตระกูล</div>
+  </div>
+
+</a>
 <div class="card">
 <div class="bottom-divider"></div>
