--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
    target="_blank"
    class="main-facebook-btn">
 
-  <div class="big-facebook-card">
+  <div class="small-facebook-card">
     <div class="glow-line"></div>
     <div class="main-fb-text">ติดต่อได้ที่เพจตระกูล</div>
     <div class="bottom-divider"></div>
