update animation & effects

--- a/index.html
+++ b/index.html
@@ -108,10 +108,17 @@
    target="_blank"
    class="main-facebook-btn">
 
-  <div class="small-facebook-card">
-    <div class="glow-line"></div>
-    <div class="main-fb-text">ติดต่อได้ที่เพจตระกูล</div>
-    <div class="bottom-divider"></div>
+ <!-- MAIN FACEBOOK BUTTON (ล่างสุด) -->
+<a 
+  href="https://www.facebook.com/profile.php?id=61586355033442" 
+  target="_blank"
+  class="main-facebook-btn"
+>
+  <div class="facebook-box big-facebook-card">
+    ติดต่อเข้าตระกูล
+  </div>
+  <div class="main-fb-text">
+    คลิกเพื่อเข้าหน้าเพจหลัก
   </div>
 
 </a>
