--- a/index.html
+++ b/index.html
@@ -114,11 +114,9 @@
   target="_blank"
   class="main-facebook-btn"
 >
-  <div class="facebook-box big-facebook-card">
+  <div class="facebook-box facebook-card">
     ติดต่อเข้าตระกูล
   </div>
-  <div class="main-fb-text">
-    คลิกเพื่อเข้าหน้าเพจหลัก
-  </div>
+
 
 </a>
